; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/apic/extr_apic_numachip.c_numachip1_get_apic_id.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/apic/extr_apic_numachip.c_numachip1_get_apic_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@X86_FEATURE_NODEID_MSR = common dso_local global i32 0, align 4
@MSR_FAM10H_NODE_ID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @numachip1_get_apic_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @numachip1_get_apic_id(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = lshr i64 %5, 24
  %7 = and i64 %6, 255
  %8 = trunc i64 %7 to i32
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* @X86_FEATURE_NODEID_MSR, align 4
  %10 = call i64 @static_cpu_has(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %23

12:                                               ; preds = %1
  %13 = load i32, i32* @MSR_FAM10H_NODE_ID, align 4
  %14 = load i64, i64* %3, align 8
  %15 = call i32 @rdmsrl(i32 %13, i64 %14)
  %16 = load i64, i64* %3, align 8
  %17 = shl i64 %16, 2
  %18 = and i64 %17, 65280
  %19 = load i32, i32* %4, align 4
  %20 = zext i32 %19 to i64
  %21 = or i64 %20, %18
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %4, align 4
  br label %23

23:                                               ; preds = %12, %1
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i64 @static_cpu_has(i32) #1

declare dso_local i32 @rdmsrl(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
